# csnake

./: CMakeLists.txt  game.c  game.h  grid.h  main.c  utils.h
